Link script file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     />
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Script file -->
+    <script defer src="app.js"></script>
     <title>Loopstudios landing page</title>
   </head>
   <body>
